Correction version mobile

--- a/directriceartistique/style.css
+++ b/directriceartistique/style.css
@@ -1,17 +1,17 @@
 @font-face {
 	font-family: "IBM Plex Sans";
-	src: url('Font/IBMPlexSans-VariableFont_wdth,wght.ttf') format('truetype');
+	src: url('/directriceartistique/Font/IBMPlexSans-VariableFont_wdth,wght.ttf') format('truetype');
 	font-style: normal;
 }
 @font-face {
 	font-family: "IBM Plex Sans";
-	src: url('Font/IBMPlexSans-Italic-VariableFont_wdth,wght.ttf') format('truetype');
+	src: url('/directriceartistique/Font/IBMPlexSans-Italic-VariableFont_wdth,wght.ttf') format('truetype');
 	font-style: italic;
 }
 
 html, body {
 	background-color: #9ac4ee;
-	background-image: url('Img/fond.png');
+	background-image: url('/directriceartistique/Img/fond.png');
 	background-repeat: repeat;
 	background-size: auto;
 	font-family: "IBM Plex Sans", Arial, sans-serif;
